--- a/remove_odoo_enterprise/i18n/hr.po
+++ b/remove_odoo_enterprise/i18n/hr.po
@@ -1,6 +1,6 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* remove_odoo_enterprise
+# 	* remove_odoo_enterprise
 #
 msgid ""
 msgstr ""
@@ -13,11 +13,21 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 3.8\n"
+
+#. module: remove_odoo_enterprise
+#: model:ir.model,name:remove_odoo_enterprise.model_base
+msgid "Base"
+msgstr ""
 
 #. module: remove_odoo_enterprise
 #: model:ir.model,name:remove_odoo_enterprise.model_res_config_settings
 msgid "Config Settings"
 msgstr "Postavke"
+
+#. module: remove_odoo_enterprise
+#: model:ir.model,name:remove_odoo_enterprise.model_ir_module_module
+msgid "Module"
+msgstr ""
